[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/16X16.png" type="Texture" id=2]
[ext_resource path="res://Health.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Hunger.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/coconut.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/contextMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Retro Gaming.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Main.gd" type="Script" id=8]
[ext_resource path="res://Crafting/CraftingSystem.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/day_and_night.tscn" type="PackedScene" id=10]

[sub_resource type="TileSet" id=1]
0/name = "16X16.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 32, 16, 48, 48 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 5, Vector2( 1, 0 ), 5, Vector2( 2, 0 ), 5 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "16X16.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 16, 48, 48 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "16X16.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 128, 48, 32, 16 )
2/tile_mode = 1
2/autotile/bitmask_mode = 0
2/autotile/bitmask_flags = [ Vector2( 0, 0 ), 256, Vector2( 0, 1 ), 260, Vector2( 0, 2 ), 260, Vector2( 0, 3 ), 4, Vector2( 1, 0 ), 320, Vector2( 1, 1 ), 325, Vector2( 1, 2 ), 325, Vector2( 1, 3 ), 5, Vector2( 2, 0 ), 320, Vector2( 2, 1 ), 325, Vector2( 2, 2 ), 325, Vector2( 2, 3 ), 5, Vector2( 3, 0 ), 64, Vector2( 3, 1 ), 65, Vector2( 3, 2 ), 65, Vector2( 3, 3 ), 1 ]
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 16, 16 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "16X16.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 144, 48, 16, 16 )
3/tile_mode = 1
3/autotile/bitmask_mode = 0
3/autotile/bitmask_flags = [ Vector2( 0, 0 ), 4, Vector2( 1, 0 ), 5, Vector2( 2, 0 ), 5, Vector2( 3, 0 ), 1 ]
3/autotile/icon_coordinate = Vector2( 0, 0 )
3/autotile/tile_size = Vector2( 16, 16 )
3/autotile/spacing = 0
3/autotile/occluder_map = [  ]
3/autotile/navpoly_map = [  ]
3/autotile/priority_map = [  ]
3/autotile/z_index_map = [  ]
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "16X16.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 112, 80, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "16X16.png 5"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 16, 112, 48, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "16X16.png 6"
6/texture = ExtResource( 2 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 80, 48, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "16X16.png 7"
7/texture = ExtResource( 2 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 96, 0, 16, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "16X16.png 8"
8/texture = ExtResource( 2 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 112, 16, 16, 16 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "16X16.png 9"
9/texture = ExtResource( 2 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 128, 48, 16, 16 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0

[sub_resource type="DynamicFont" id=5]
size = 10
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = -5
font_data = ExtResource( 7 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15.0042, 14.8813 )

[sub_resource type="CircleShape2D" id=6]

[sub_resource type="GDScript" id=2]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 7 )

[node name="Main" type="Node2D"]
position = Vector2( 11, 9 )
script = ExtResource( 8 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -720897, 1, 0, -786432, 1, 0, -655362, 1, 0, -655361, 1, 0, -720896, 0, 0, -720895, 1, 0, -589826, 1, 0, -589825, 0, 0, -655360, 1, 0, -655359, 1, 0, -655358, 1, 0, -655357, 1, 0, -524291, 1, 0, -524289, 0, 0, -589824, 1, 0, -458755, 1, 0, -458753, 1, 0, -524288, 1, 0, -393219, 1, 0, -393217, 1, 0, -458752, 0, 0, -327683, 1, 0, -327682, 1, 0, -327681, 1, 0, -393216, 1, 0, -393215, 1, 0, -393214, 1, 0, -262148, 0, 0, -262147, 0, 0, -262145, 1, 0, -327680, 1, 0, -327679, 1, 0, -327678, 1, 0, -196612, 1, 0, -196611, 1, 0, -196610, 1, 0, -196609, 1, 0, -262144, 1, 0, -262138, 1, 0, -131076, 1, 0, -131075, 1, 0, -131073, 0, 0, -196608, 1, 0, -196607, 1, 0, -196606, 1, 0, -196605, 1, 0, -65538, 1, 0, -65537, 1, 0, -131072, 1, 0, -131071, 1, 0, -4, 1, 0, -3, 1, 0, -2, 1, 0, -1, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 1, 0, -65521, 1, 0, -65520, 1, 0, -65519, 1, 0, -65518, 1, 0, -65517, 1, 0, -65516, 1, 0, -65515, 1, 0, -65514, 1, 0, -65513, 1, 0, -65512, 1, 0, -65511, 1, 0, -65510, 1, 0, -65509, 1, 0, -65508, 1, 0, -65507, 1, 0, -65506, 1, 0, -65505, 1, 0, -65504, 1, 0, -65503, 1, 0, -65502, 1, 0, -65501, 1, 0, -65500, 1, 0, -65497, 0, 0, 65535, 1, 0, 0, 1, 0, 6, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 22, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 28, 1, 0, 29, 1, 0, 30, 1, 0, 31, 1, 0, 36, 1, 0, 39, 0, 0, 131071, 1, 0, 65536, 1, 0, 65539, 1, 0, 65540, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 65555, 1, 0, 65556, 1, 0, 65557, 1, 0, 65558, 1, 0, 65559, 1, 0, 65560, 1, 0, 65561, 1, 0, 65562, 1, 0, 65563, 1, 0, 65564, 1, 0, 65565, 1, 0, 65566, 1, 0, 65567, 1, 0, 65568, 1, 0, 65569, 1, 0, 65570, 1, 0, 65571, 1, 0, 65572, 1, 0, 65575, 0, 0, 196607, 1, 0, 131072, 1, 0, 131074, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131081, 4, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 131092, 1, 0, 131093, 1, 0, 131094, 1, 0, 131095, 1, 0, 131096, 1, 0, 131097, 1, 0, 131100, 1, 0, 131101, 1, 0, 131102, 1, 0, 131104, 1, 0, 131105, 1, 0, 131106, 1, 0, 131107, 1, 0, 131108, 1, 0, 131109, 1, 0, 131110, 0, 0, 131111, 0, 0, 262143, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 7, 0, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 196626, 1, 0, 196627, 1, 0, 196628, 1, 0, 196629, 7, 0, 196630, 1, 0, 196631, 1, 0, 196632, 1, 0, 196634, 1, 0, 196635, 1, 0, 196640, 1, 0, 196641, 1, 0, 196642, 1, 0, 196643, 1, 0, 196644, 1, 0, 196645, 1, 0, 196646, 0, 0, 196647, 0, 0, 327679, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262150, 1, 0, 262151, 1, 0, 262153, 1, 0, 262154, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 8, 0, 262163, 1, 0, 262164, 1, 0, 262165, 1, 0, 262166, 1, 0, 262167, 1, 0, 262169, 1, 0, 262170, 1, 0, 262174, 1, 0, 262175, 1, 0, 262176, 1, 0, 262178, 1, 0, 262179, 0, 0, 262180, 1, 0, 262181, 1, 0, 262182, 0, 0, 262183, 0, 0, 393215, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327691, 1, 0, 327692, 1, 0, 327699, 1, 0, 327700, 1, 0, 327701, 1, 0, 327705, 1, 0, 327706, 1, 0, 327707, 1, 0, 327708, 1, 0, 327709, 1, 0, 327711, 4, 0, 327713, 0, 0, 327714, 1, 0, 327715, 1, 0, 327716, 1, 0, 327717, 1, 0, 327718, 0, 0, 327719, 0, 0, 458751, 1, 0, 393216, 1, 0, 393217, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 7, 0, 393228, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 393236, 1, 0, 393237, 1, 0, 393238, 1, 0, 393239, 1, 0, 393240, 1, 0, 393241, 1, 0, 393242, 1, 0, 393246, 0, 0, 393247, 0, 0, 393248, 0, 0, 393249, 1, 0, 393250, 1, 0, 393251, 1, 0, 393252, 1, 0, 393253, 0, 0, 393254, 0, 0, 393255, 0, 0, 524287, 1, 0, 458752, 1, 0, 458753, 1, 0, 458755, 1, 0, 458756, 1, 0, 458758, 1, 0, 458759, 0, 0, 458762, 1, 0, 458763, 1, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 1, 0, 458773, 1, 0, 458775, 1, 0, 458776, 1, 0, 458777, 1, 0, 458778, 1, 0, 458779, 1, 0, 458780, 1, 0, 458781, 1, 0, 458782, 0, 0, 458783, 0, 0, 458784, 0, 0, 458785, 1, 0, 458786, 0, 0, 458787, 0, 0, 458788, 1, 0, 458789, 0, 0, 458790, 0, 0, 458791, 0, 0, 589823, 1, 0, 524288, 1, 0, 524291, 1, 0, 524293, 1, 0, 524295, 0, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 1, 0, 524313, 1, 0, 524314, 1, 0, 524317, 1, 0, 524318, 1, 0, 524319, 0, 0, 524320, 0, 0, 524321, 1, 0, 524322, 1, 0, 524323, 0, 0, 524324, 1, 0, 524325, 0, 0, 524326, 0, 1, 524327, 0, 0, 655359, 1, 0, 589824, 1, 0, 589826, 1, 0, 589829, 1, 0, 589831, 0, 0, 589832, 4, 0, 589833, 1, 0, 589834, 1, 0, 589837, 1, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 2, 589845, 0, 0, 589846, 0, 0, 589847, 1, 0, 589850, 1, 0, 589851, 1, 0, 589854, 1, 0, 589855, 1, 0, 589857, 0, 0, 589858, 1, 0, 589859, 1, 0, 589861, 1, 0, 720895, 1, 0, 655361, 1, 0, 655362, 1, 0, 655365, 1, 0, 655367, 0, 0, 655368, 1, 0, 655370, 1, 0, 655372, 1, 0, 655374, 4, 0, 655376, 1, 0, 655377, 0, 0, 655378, 0, 0, 655379, 1, 0, 655380, 1, 0, 655381, 1, 0, 655382, 0, 0, 655383, 0, 0, 655384, 1, 0, 655385, 1, 0, 655387, 1, 0, 655391, 0, 0, 655392, 4, 0, 655393, 0, 0, 655394, 1, 0, 655395, 1, 0, 655396, 1, 0, 655397, 1, 0, 786431, 1, 0, 720896, 1, 0, 720897, 1, 0, 720901, 1, 0, 720903, 0, 0, 720904, 0, 0, 720905, 1, 0, 720906, 1, 0, 720908, 1, 0, 720909, 1, 0, 720911, 1, 0, 720912, 1, 0, 720914, 1, 0, 720915, 1, 0, 720917, 1, 0, 720918, 1, 0, 720919, 0, 0, 720920, 1, 0, 720921, 0, 0, 720922, 0, 0, 720923, 0, 0, 720924, 0, 0, 720925, 0, 0, 720926, 0, 0, 720927, 1, 0, 720930, 1, 0, 720931, 1, 0, 720932, 1, 0, 786432, 1, 0, 786434, 7, 0, 786437, 1, 0, 786439, 1, 0, 786440, 0, 0, 786441, 0, 0, 786442, 1, 0, 786443, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 0, 0, 786449, 0, 0, 786450, 1, 0, 786453, 1, 0, 786454, 1, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0, 786458, 1, 0, 786459, 1, 0, 786460, 1, 0, 786463, 1, 0, 786466, 1, 0, 786467, 1, 0, 917503, 1, 0, 851968, 1, 0, 851971, 1, 0, 851973, 1, 0, 851975, 1, 0, 851977, 1, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851986, 1, 0, 851989, 4, 0, 851990, 1, 0, 851991, 1, 0, 851992, 1, 0, 851993, 1, 0, 851996, 1, 0, 851999, 1, 0, 852002, 1, 0, 852003, 1, 0, 852004, 1, 0, 852006, 1, 0, 852007, 1, 0, 983039, 1, 0, 917504, 1, 0, 917507, 1, 0, 917509, 1, 0, 917510, 1, 0, 917513, 1, 0, 917515, 1, 0, 917518, 1, 0, 917523, 1, 0, 917524, 1, 0, 917525, 1, 0, 917526, 1, 0, 917527, 1, 0, 917528, 1, 0, 917532, 1, 0, 917534, 1, 0, 917538, 1, 0, 917539, 1, 0, 917540, 1, 0, 917542, 1, 0, 1048575, 1, 0, 983040, 1, 0, 983042, 1, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983049, 7, 0, 983050, 1, 0, 983051, 1, 0, 983052, 1, 0, 983053, 1, 0, 983054, 1, 0, 983055, 1, 0, 983056, 1, 0, 983061, 1, 0, 983062, 1, 0, 983063, 1, 0, 983064, 1, 0, 983065, 1, 0, 983066, 1, 0, 983067, 1, 0, 983068, 1, 0, 983069, 1, 0, 983070, 1, 0, 983071, 7, 0, 983073, 1, 0, 983075, 1, 0, 983076, 1, 0, 983077, 1, 0, 983078, 1, 0, 1114111, 1, 0, 1048576, 1, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048583, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 1, 0, 1048589, 1, 0, 1048590, 1, 0, 1048591, 1, 0, 1048592, 1, 0, 1048593, 1, 0, 1048594, 1, 0, 1048595, 1, 0, 1048596, 1, 0, 1048597, 1, 0, 1048598, 1, 0, 1048599, 1, 0, 1048600, 1, 0, 1048604, 1, 0, 1048605, 1, 0, 1048608, 1, 0, 1048609, 1, 0, 1048611, 1, 0, 1048612, 1, 0, 1048613, 1, 0, 1048614, 1, 0, 1179647, 1, 0, 1114112, 1, 0, 1114113, 1, 0, 1114119, 1, 0, 1114123, 1, 0, 1114124, 1, 0, 1114125, 1, 0, 1114126, 1, 0, 1114127, 1, 0, 1114128, 1, 0, 1114129, 1, 0, 1114130, 1, 0, 1114131, 1, 0, 1114134, 1, 0, 1114135, 1, 0, 1114136, 1, 0, 1114137, 1, 0, 1114138, 1, 0, 1114139, 1, 0, 1114140, 1, 0, 1114147, 1, 0, 1114148, 8, 0, 1114149, 1, 0, 1114150, 1, 0, 1245183, 1, 0, 1179648, 1, 0, 1179649, 1, 0, 1179652, 8, 0, 1179655, 1, 0, 1179657, 1, 0, 1179658, 1, 0, 1179659, 1, 0, 1179667, 1, 0, 1179668, 1, 0, 1179669, 1, 0, 1179670, 1, 0, 1179683, 1, 0, 1179684, 1, 0, 1179685, 1, 0, 1245184, 1, 0, 1245185, 1, 0, 1245186, 1, 0, 1245187, 1, 0, 1245188, 1, 0, 1245191, 1, 0, 1245192, 1, 0, 1245193, 1, 0, 1245194, 1, 0, 1245195, 1, 0, 1245196, 1, 0, 1245213, 1, 0, 1245214, 1, 0, 1245215, 1, 0, 1245216, 1, 0, 1245217, 1, 0, 1245218, 1, 0, 1245219, 1, 0, 1245220, 1, 0, 1245221, 1, 0, 1376255, 1, 0, 1310720, 1, 0, 1310721, 1, 0, 1310722, 1, 0, 1310723, 1, 0, 1310724, 1, 0, 1310725, 1, 0, 1310726, 1, 0, 1310733, 1, 0, 1310734, 1, 0, 1310735, 1, 0, 1310736, 1, 0, 1310737, 1, 0, 1310738, 1, 0, 1310739, 1, 0, 1310740, 1, 0, 1310741, 1, 0, 1310744, 1, 0, 1310745, 1, 0, 1310746, 1, 0, 1310747, 1, 0, 1310748, 1, 0, 1310749, 8, 0, 1310753, 1, 0, 1310754, 1, 0, 1310755, 1, 0, 1310756, 1, 0, 1310757, 1, 0, 1441791, 1, 0, 1376256, 1, 0, 1376257, 1, 0, 1376258, 1, 0, 1376259, 1, 0, 1376260, 1, 0, 1376261, 1, 0, 1376262, 1, 0, 1376263, 1, 0, 1376264, 1, 0, 1376265, 1, 0, 1376266, 1, 0, 1376267, 1, 0, 1376268, 1, 0, 1376269, 1, 0, 1376270, 1, 0, 1376271, 1, 0, 1376272, 1, 0, 1376273, 1, 0, 1376274, 1, 0, 1376275, 1, 0, 1376276, 1, 0, 1376277, 1, 0, 1376278, 1, 0, 1376279, 1, 0, 1376280, 1, 0, 1376281, 1, 0, 1376282, 1, 0, 1376283, 1, 0, 1376284, 1, 0, 1376285, 1, 0, 1376286, 1, 0, 1376287, 1, 0, 1376288, 1, 0, 1376289, 1, 0, 1376292, 1, 0 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 312, 232 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 0.971, 0.962 )
smoothing_enabled = true
smoothing_speed = 10.0

[node name="ViewportContainer" type="ViewportContainer" parent="Player"]
margin_top = -232.0

[node name="GUI" type="CanvasLayer" parent="Player/ViewportContainer"]
scale = Vector2( 1.5, 1.5 )
transform = Transform2D( 1.5, 0, 0, 1.5, 0, 0 )

[node name="SAVE" type="Control" parent="Player/ViewportContainer/GUI"]
margin_left = 272.0
margin_top = 107.333
margin_right = 272.0
margin_bottom = 107.333
rect_scale = Vector2( 0.5, 0.5 )

[node name="SaveContainer" type="VBoxContainer" parent="Player/ViewportContainer/GUI/SAVE"]
margin_right = 43.0
margin_bottom = 40.0

[node name="SaveButton" type="Button" parent="Player/ViewportContainer/GUI/SAVE/SaveContainer"]
margin_right = 91.0
margin_bottom = 20.0
text = "SAVE"

[node name="LoadButton" type="Button" parent="Player/ViewportContainer/GUI/SAVE/SaveContainer"]
margin_top = 24.0
margin_right = 91.0
margin_bottom = 44.0
text = "LOAD"

[node name="MenuButton" type="Button" parent="Player/ViewportContainer/GUI/SAVE/SaveContainer"]
margin_top = 48.0
margin_right = 91.0
margin_bottom = 68.0
text = "MAIN MENU"

[node name="Health" parent="Player/ViewportContainer/GUI" instance=ExtResource( 3 )]
margin_left = 408.0
margin_top = 237.333
margin_right = 524.345
margin_bottom = 255.333
rect_scale = Vector2( 0.542531, 0.572789 )

[node name="Hunger" parent="Player/ViewportContainer/GUI" instance=ExtResource( 4 )]
margin_left = 393.333
margin_top = 237.333
margin_right = 398.333
margin_bottom = 313.333
rect_scale = Vector2( 15.5154, 0.145127 )
max_value = 500.0
value = 500.0

[node name="HungerTimer" type="Timer" parent="Player/ViewportContainer/GUI"]
wait_time = 5.0

[node name="craft" type="RichTextLabel" parent="Player/ViewportContainer/GUI"]
margin_left = 11.0
margin_top = 9.0
margin_right = 236.0
margin_bottom = 49.0

[node name="day_and_night" parent="Player/ViewportContainer/GUI" instance=ExtResource( 10 )]
position = Vector2( 105.333, 1.33333 )
scale = Vector2( 0.5, 0.5 )

[node name="Thoughts" type="Label" parent="Player"]
visible = false
margin_left = -59.0
margin_top = -39.0
margin_right = 98.0
margin_bottom = -10.0
rect_scale = Vector2( 0.780456, 0.925607 )
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1

[node name="coconut" parent="." instance=ExtResource( 5 )]
position = Vector2( 180, 287 )
scale = Vector2( 0.399889, 0.40319 )

[node name="Area2D" type="Area2D" parent="coconut"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="coconut/Area2D"]
shape = SubResource( 3 )

[node name="nearArea" type="Area2D" parent="coconut"]

[node name="nearCollision" type="CollisionShape2D" parent="coconut/nearArea"]
scale = Vector2( 5, 5 )
shape = SubResource( 6 )

[node name="Node2D" type="Node2D" parent="."]
script = SubResource( 2 )

[node name="contextMenu" parent="Node2D" instance=ExtResource( 6 )]
visible = false
margin_left = 213.0
margin_top = 236.0
margin_right = 253.0
margin_bottom = 276.0

[node name="exitButton" type="Button" parent="Node2D/contextMenu"]
margin_left = 13.6272
margin_top = 34.271
margin_right = 65.6272
margin_bottom = 54.271
rect_scale = Vector2( 0.27431, 0.327439 )
text = "X"

[node name="eatButton" type="Button" parent="Node2D/contextMenu"]
margin_left = 1.04828
margin_top = 1.14236
margin_right = 46.0483
margin_bottom = 28.1424
rect_scale = Vector2( 0.386931, 0.591042 )
custom_fonts/font = SubResource( 4 )
text = "Eat"

[node name="viewButton" type="Button" parent="Node2D/contextMenu"]
margin_left = 19.9167
margin_top = 1.14236
margin_right = 75.9167
margin_bottom = 28.1424
rect_scale = Vector2( 0.384815, 0.587334 )
custom_fonts/font = SubResource( 4 )
text = "View"

[node name="CraftingSystem" parent="." instance=ExtResource( 9 )]

[node name="Position2D" type="Position2D" parent="."]

[connection signal="pressed" from="Player/ViewportContainer/GUI/SAVE/SaveContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="Player/ViewportContainer/GUI/SAVE/SaveContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="Player/ViewportContainer/GUI/SAVE/SaveContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="mouse_entered" from="coconut/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="coconut/Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="area_entered" from="coconut/nearArea" to="." method="_on_nearArea_area_entered"]
[connection signal="area_exited" from="coconut/nearArea" to="." method="_on_nearArea_area_exited"]
[connection signal="pressed" from="Node2D/contextMenu/exitButton" to="." method="_on_exitButton_pressed"]
[connection signal="pressed" from="Node2D/contextMenu/eatButton" to="." method="_on_eatButton_pressed"]
[connection signal="pressed" from="Node2D/contextMenu/viewButton" to="." method="_on_viewButton_pressed"]
